2006-05-30  Sebastien Pouliot  <sebastien@ximian.com>

	* FontFamilyTest.cs: New. Unit tests for FontFamily.
	* TestFont.cs: Added more test cases to Font.

2006-05-29  Sebastien Pouliot  <sebastien@ximian.com>

	* TestImageFormatConverter.cs: Added test cases for all well known
	ImageFormat short and long names using ConvertFrom.

2006-05-26  Sebastien Pouliot  <sebastien@ximian.com>

	* TestColor.cs: Added test cases for serialization. Currently we can't
	deserialize Color coming from MS serialization.

2006-05-25  Sebastien Pouliot  <sebastien@ximian.com> 

	* TestRegion.cs: Added a new fixture that executes with UnmanagedCode
	permission and test the [Get|From]Hrgn methods.

2006-05-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TestBitmap.cs: new tests for the default format and the default file
	type.

2006-05-24  Sebastien Pouliot  <sebastien@ximian.com> 

	* ColorConverter.cs: Split unworking test case from ConvertFrom into
	a separate test case (marked as NotWorking).
	* TestBitmap.cs: Mark test case Rotate1bit4bit as NotDotNet as it was
	probably never tested under Windows (and doesn't work there).
	* TestFontConverter.cs: Split test case for CreateInstance to check 
	for ArgumentException (2.0) or NullReferenceException (1.x).
	* TestPointConverter.cs: Split test case for CreateInstance to check 
	for ArgumentException (2.0) or NullReferenceException (1.x).
	* TestRectangleConverter.cs: Split test case for CreateInstance to 
	check for ArgumentException (2.0) or NullReferenceException (1.x).
	* TestSizeConverter.cs: Split test case for CreateInstance to check 
	for ArgumentException (2.0) or NullReferenceException (1.x).
	* TestSizeFConverter.cs: Add/split test cases for CreateInstance to
	check for InvalidCastException and NullReferenceException.
	* TestSizeF.cs: Mark GetHashCodeTest as NotWorking in 2.0 profile as
	Empty and SizeF(0,0) don't share the same hash code.

2006-05-24  Sebastien Pouliot  <sebastien@ximian.com>
