@@ -1,3 +1,8 @@
+2006-06-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* TestColor.cs: added 2 more tests for serialization and enabled one
+	that was not working.
+
 2006-05-30  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* FontFamilyTest.cs: New. Unit tests for FontFamily.
